# loans

./: .gitignore  .travis.yml  Dockerfile  README.md  deploy_id_rsa  deploy_id_rsa.enc  fabfile.py  gunicorn.conf  pyproject.toml  requirements.txt  setup.cfg
config/: history.txt  nginx.conf  supervisor.conf
core/: foobar.py  settings.py  test_foobar.py  urls.py  wsgi.py
docker/: docker-compose.yml  gunicorn.conf  nginx.conf
loans/: factories.py  models.py  urls.py  views.py
loans/migrations/: 0001_initial.py  0002_auto_20191012_0930.py  0003_auto_20191019_0935.py
loans/templates/loans/: loan_list.html
loans/tests/api/: test_api.py
loans/tests/bdd/: test_loans.py
loans/tests/bdd/features/: loans.feature
loans/tests/unit/: test_borrower.py  test_loan.py
