[tool.poetry]
name = "bdd_example"
version = "0.1.0"
description = ""
authors = ["Azamat Galimzhanov <azamat@galimzhanov.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
django = "^2.2"
gunicorn = "^20.0"
gevent = "^1.4"

[tool.poetry.dev-dependencies]
selenium = "^3.141"
pytest = "^5.1"
pytest-bdd = "^3.2"
pytest-splinter = "^2.0"
pytest-django = "^3.5"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
factory_boy = "^2.12"
ipython = "^7.8"
pytest-mock = "^1.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
